<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_highlight" />
        <item
            android:id="@+id/nav_weather"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_weather" />
        <item
            android:id="@+id/nav_worldtime"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_worldtime" />
        <item
            android:id="@+id/nav_goldprice"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_goldprice" />
        <item
            android:id="@+id/nav_stockprice"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_stockprice" />
        <item
            android:id="@+id/nav_currency"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_convert_currency" />
    </group>
</menu>