<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.highlightapplication.ui.Highlight.HomeFragment"
        android:label="@string/menu_highlight"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_weather"
        android:name="com.example.highlightapplication.ui.Weather.WeatherFragment"
        android:label="@string/menu_weather"
        tools:layout="@layout/fragment_weather" />

    <fragment
        android:id="@+id/nav_worldtime"
        android:name="com.example.highlightapplication.ui.WorldTime.WorldTimeFragment"
        android:label="@string/menu_worldtime"
        tools:layout="@layout/fragment_worldtime" />

    <fragment
        android:id="@+id/nav_goldprice"
        android:name="com.example.highlightapplication.ui.GoldPrice.GoldpriceFragment"
        android:label="@string/menu_goldprice"
        tools:layout="@layout/fragment_goldprice" />

    <fragment
        android:id="@+id/nav_stockprice"
        android:name="com.example.highlightapplication.ui.StockPrice.StockpriceFragment"
        android:label="@string/menu_stockprice"
        tools:layout="@layout/fragment_stockprice" />

    <fragment
        android:id="@+id/nav_currency"
        android:name="com.example.highlightapplication.ui.Currency.CurrencyFragment"
        android:label="@string/menu_convert_currency"
        tools:layout="@layout/fragment_currency" />
</navigation>